fix: scrolling issues on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  overflow: hidden;
+html, body {
+  overflow: visible;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
